IC-7756: Upgrade to Java 17 using OpenRewrite